--- a/entry/src/main/res/layout/player_audio_ui.xml
+++ b/entry/src/main/res/layout/player_audio_ui.xml
@@ -25,8 +25,8 @@
         android:thumbOffset="0dp"
         android:layout_width="match_parent"
         android:layout_height="12dp"
-        android:layout_below="@+id/filename_audio"
-        android:layout_toStartOf="@+id/playback_play"
+        android:layout_below="@id/filename_audio"
+        android:layout_toStartOf="@id/playback_play"
         android:layout_marginTop="18dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -60,7 +60,7 @@
         android:id="@+id/playback_play"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_below="@+id/filename_audio"
+        android:layout_below="@id/filename_audio"
         android:layout_alignParentEnd="true"
         android:background="@drawable/ic_player_playing"
         android:src="@drawable/ic_player_stop" />
