--- a/entry/src/main/res/layout/about.xml
+++ b/entry/src/main/res/layout/about.xml
@@ -12,7 +12,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button_Container">
+        android:layout_above="@id/button_Container">
 
         <LinearLayout
             android:layout_width="fill_parent"
