--- a/entry/src/main/res/layout/call_video_audio.xml
+++ b/entry/src/main/res/layout/call_video_audio.xml
@@ -29,7 +29,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/button_Container">
+        android:layout_above="@id/button_Container">
 
         <LinearLayout
             android:id="@+id/callInfoGroup"
@@ -77,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_toEndOf="@+id/security_protocol"
+                        android:layout_toEndOf="@id/security_protocol"
                         android:src="@drawable/secure_off_dark" />
                 </RelativeLayout>
 
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:layout_toEndOf="@+id/security_group"
+                    android:layout_toEndOf="@id/security_group"
                     android:gravity="center_vertical"
                     android:text="{call status}"
                     android:textColor="@color/textColorWhite"
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:layout_toEndOf="@+id/callStatus"
+                    android:layout_toEndOf="@id/callStatus"
                     android:text="00:00:00"
                     android:textColor="@color/textColorWhite"
                     android:textSize="@dimen/label_text_size" />
