--- a/entry/src/main/res/layout/chat_file_transfer_in_row.xml
+++ b/entry/src/main/res/layout/chat_file_transfer_in_row.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="4dp"
-        android:layout_toEndOf="@+id/avatarView"
+        android:layout_toEndOf="@id/avatarView"
         android:background="@drawable/holder_filexfer"
         android:orientation="vertical"
         android:paddingStart="10dp"
@@ -135,7 +135,7 @@
         android:id="@+id/filexferArrowView"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/chat_arrow_height"
-        android:layout_alignStart="@+id/msg_body_layout"
+        android:layout_alignStart="@id/msg_body_layout"
         android:layout_marginStart="-10dp"
         android:layout_marginTop="@dimen/chat_arrow_top"
         android:src="@drawable/file_xfer_arrow_in" />
