--- a/entry/src/main/res/layout/chat_incoming_row.xml
+++ b/entry/src/main/res/layout/chat_incoming_row.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="4dp"
-        android:layout_toEndOf="@+id/avatarView"
+        android:layout_toEndOf="@id/avatarView"
         android:background="@drawable/holder_message"
         android:gravity="start"
         android:orientation="vertical"
@@ -94,7 +94,7 @@
         android:id="@+id/messageArrowView"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/chat_arrow_height"
-        android:layout_alignStart="@+id/msg_body_layout"
+        android:layout_alignStart="@id/msg_body_layout"
         android:layout_marginStart="-10dp"
         android:layout_marginTop="@dimen/chat_arrow_top"
         android:src="@drawable/message_arrow_in_dark" />
