--- a/entry/src/main/res/layout/chatroom_list_row.xml
+++ b/entry/src/main/res/layout/chatroom_list_row.xml
@@ -37,7 +37,7 @@
         android:background="@drawable/list_selector_state"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/avatarLayout"
+        android:layout_toEndOf="@id/avatarLayout"
         android:gravity="bottom"
         android:paddingBottom="4dp"
         android:paddingStart="10dp">
@@ -66,7 +66,7 @@
         android:id="@+id/unread_count"
         android:layout_width="@dimen/IconSize"
         android:layout_height="@dimen/IconSize"
-        android:layout_toStartOf="@+id/cb_autojoin"
+        android:layout_toStartOf="@id/cb_autojoin"
         android:layout_centerVertical="true" />
 
     <CheckBox
