--- a/entry/src/main/res/layout/omemo_trust_keys_dialog.xml
+++ b/entry/src/main/res/layout/omemo_trust_keys_dialog.xml
@@ -7,7 +7,7 @@
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button_bar"
+        android:layout_above="@id/button_bar"
         android:layout_alignParentTop="true">
 
         <LinearLayout
