--- a/entry/src/main/res/layout/select_account_dropdown.xml
+++ b/entry/src/main/res/layout/select_account_dropdown.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/accountProtoIcon"
+        android:layout_toEndOf="@id/accountProtoIcon"
         android:paddingStart="5dp"
         android:text="AccountName"
         tools:ignore="RtlHardcoded" />
