--- a/android-youtube-player/core/src/main/res/layout/ayp_default_player_ui.xml
+++ b/android-youtube-player/core/src/main/res/layout/ayp_default_player_ui.xml
@@ -211,6 +211,17 @@
                 android:focusable="true" />
 
             <ImageView
+                android:id="@+id/hide_screen_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:src="@drawable/ayp_ic_hide_screen"
+                android:background="@drawable/ayp_background_item_selected"
+                android:contentDescription="@string/ayp_screen_hide_button"
+                android:clickable="true"
+                android:focusable="true" />
+
+            <ImageView
                 android:id="@+id/fullscreen_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
