--- a/entry/src/main/res/layout/chat_file_transfer_in_row.xml
+++ b/entry/src/main/res/layout/chat_file_transfer_in_row.xml
@@ -13,7 +13,7 @@
 
         <ImageButton
             android:id="@+id/button_file"
-            android:layout_width="64sp"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:background="@android:color/transparent"
