--- a/entry/src/main/res/xml/changelog_master.xml
+++ b/entry/src/main/res/xml/changelog_master.xml
@@ -5,10 +5,18 @@
      Don't edit the changelog_<name>_branch.xml files in the gh-pages branch.
      They are automatically updated with "ant bump-version".
 -->
+
 <changelog>
+    <release version="00.09.010 (10/02/2025)" versioncode="0009010">
+        <change>Please read &lt;a href='https://cmeng-git.github.io/atalk/faq.html#ui_01'&gt;aTalk UI design &amp; Implementation&lt;/a&gt; before using aTalk</change>
+        <change>Executors.newSingleThreadExecutor() in AccountInfoPresenceActivity$DetailsLoadWorker must implement shutdown and awaitTermination 1.5s, else ANR in FFR</change>
+        <change>Avoid using smack StringUtils.isEmpty as it does not check for null content</change>
+        <change>Bug fixes and enhancements</change>
+    </release>
+
     <release version="00.09.000 (09/04/2025)" versioncode="0009000">
         <change>Please read &lt;a href='https://cmeng-git.github.io/atalk/faq.html#ui_01'&gt;aTalk UI design &amp; Implementation&lt;/a&gt; before using aTalk</change>
-        <change>Upgrade jni libraries build sources: libvpx 1.15.2 (1.13.1); opus 1.5.2 (1.3.2); openssl 3.5.2 (1.1.1t)</change>
+        <change>Upgrade jni libraries build sources: libvpx 1.15.2 (1.13.1); opus 1.5.2 (1.3.2); openssl 3.5.2 (1.1.1t); x264 165 (164)</change>
         <change>Fix cast exception introduced in v4.0.0 when apply fix for duplicate sending of the initial &lt;presence/> stanza by smack ServiceDiscoveryManager</change>
         <change>Fix endless loop in discoverInfoNonBlocking at times, block all BareJid invalid discInfo access</change>
         <change>Fix notification replied message not shown in chatSession UI, until it is closed and reopen</change>
@@ -101,6 +109,7 @@
         <change>Update German and Russian string.xml files</change>
         <change>Remove unused classes/files</change>
     </release>
+
     <release version="00.06.000 (02/13/2025)" versioncode="0006000">
         <change>Reimplement deprecated classes/methods i.e. onBackPressed and AsyncTask with new functions</change>
         <change>Fix show aTalk icon MissingForegroundServiceTypeException; use NotificationManager.notify() instead</change>
@@ -294,5 +303,4 @@
         <change>Migrate ice4j to only compatible with API-24</change>
         <change>Bug fixes and enhancements</change>
     </release>
-
 </changelog>
