--- a/entry/src/main/res/layout/alert_dialog.xml
+++ b/entry/src/main/res/layout/alert_dialog.xml
@@ -11,7 +11,8 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/alertContent"
@@ -31,9 +32,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="10dp">
+        android:layout_height="60dp"
+        android:paddingTop="10dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/cancelButton"
